# atlas_demo

./: .gitignore  Taskfile.yaml  atlas.hcl  old.yml  pyproject.toml
.github/workflows/: atlas.yml  ci-atlas.yaml
migrations/: 20250625113330.sql  20250625115413.sql  20250625132902.sql  20250625133007.sql  20250625133658.sql  atlas.sum
tables/: __init__.py  order.py
